# Minecraft-TeamViewer-Backend

./: .coverage  .gitignore  AGENTS.md  Dockerfile  README.md  buf.gen.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: docker-publish.yml
.pytest_cache/v/cache/: lastfailed  nodeids
admin-ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
admin-ui/src/: App.vue  api.ts  charts.test.ts  charts.ts  connectionColumns.test.ts  connectionColumns.ts  main.ts  roomOverview.test.ts  roomOverview.ts  style.css  time.ts  types.ts
admin-ui/src/components/: AuditFilters.vue  AuditTable.test.ts  AuditTable.vue  ConnectionStatusTable.vue  LiveTrafficCards.vue  LoginPanel.vue  MetricChartCard.test.ts  MetricChartCard.vue  MetricsToolbar.vue  OverviewCards.vue  RoomOverviewTable.vue  TrafficChartCard.test.ts  TrafficChartCard.vue  TrafficToolbar.vue
admin-ui/src/composables/: useAdminBootstrap.ts  useAdminSse.test.ts  useAdminSse.ts  useAuditState.ts  useMetricsState.ts  useOverviewState.ts
deploy/: openresty-teamviewer.conf.example
proto/teamviewer/v1/: teamviewer.proto
scripts/: generate_proto_all.sh  generate_proto_python.sh
src/: main.py
src/server/: admin_frontend.py  admin_payloads.py  admin_sse.py  admin_store.py  admin_ui.py  broadcaster.py  codec.py  models.py  protocol.py  state.py  versioning.py
tests/: test_admin_http.py  test_admin_store.py  test_battle_chunk_patch.py  test_legacy_msgpack.py  test_main_compat_exports.py  test_player_bundle_expand.py  test_proto_codec_roundtrip.py  test_websocket_routes.py
(+32 files in other folders)
